# sphinx-kconfig

./: README.md  pyproject.toml
sphinx_kconfig/: __init__.py
sphinx_kconfig/static/: kconfig.js
